[package]
name = "phonic"
version = "0.0.1"
edition = "2021"

[lib]
path = "lib.rs"

[workspace]
resolver = "2"
members = [
	"crates/phonic_core",
	"crates/phonic_signal",
	"crates/phonic_dsp",
	"crates/phonic_io",
	"crates/phonic_io_core",
	"crates/phonic_format_wave",
	"crates/phonic_codec_pcm",
	"crates/phonic_cpal",
	"crates/phonic_rtrb",
	"examples/player",
	"examples/export",
	"examples/converter",
]

[features]
default = ["signal"]
signal = ["dep:phonic_signal"]
dsp = ["dep:phonic_dsp"]

io = ["dep:phonic_io", "phonic_dsp/io"]
io-full = ["io", "wave", "pcm"]
wave = ["io", "phonic_io/wave"]
pcm = ["io", "phonic_io/pcm"]

cpal = ["dep:phonic_cpal"]
rtrb = ["dep:phonic_rtrb"]

[dependencies]
phonic_core = { version = "0.1.0", path = "crates/phonic_core" }
phonic_signal = { version = "0.1.0", path = "crates/phonic_signal", optional = true }
phonic_dsp = { version = "0.1.0", path = "crates/phonic_dsp", optional = true }
phonic_io = { version = "0.1.0", path = "crates/phonic_io", optional = true }
phonic_cpal = { version = "0.1.0", path = "crates/phonic_cpal", optional = true }
phonic_rtrb = { version = "0.1.0", path = "crates/phonic_rtrb", optional = true }

[dev-dependencies]
cpal = "0.15.3"
rtrb = "0.3.1"
