[package]
name = "phonic"
version = "0.0.1"
edition = "2021"

[lib]
path = "lib.rs"

[workspace]
resolver = "2"
members = [
	"crates/phonic_signal",
	"crates/phonic_macro",
	"crates/phonic_buf",
	"crates/phonic_dsp",
	"crates/phonic_io",
	"crates/phonic_io_core",
	"crates/phonic_format_wave",
	"crates/phonic_codec_pcm",
	"crates/phonic_cpal",
	"examples/player",
	"examples/export",
	"examples/converter",
]

[features]
default = []
buf = ["dep:phonic_buf"]
dsp = ["dep:phonic_dsp"]

io = ["dep:phonic_io", "phonic_dsp?/io"]
io-full = ["io", "wave", "pcm"]
wave = ["io", "phonic_io/wave"]
pcm = ["io", "phonic_io/pcm"]

cpal = ["dep:phonic_cpal"]

[dependencies]
phonic_signal = { version = "0.1.0", path = "crates/phonic_signal" }
phonic_buf = { version = "0.1.0", path = "crates/phonic_buf", optional = true }
phonic_dsp = { version = "0.1.0", path = "crates/phonic_dsp", optional = true }
phonic_io = { version = "0.1.0", path = "crates/phonic_io", optional = true }
phonic_cpal = { version = "0.1.0", path = "crates/phonic_cpal", optional = true }

[dev-dependencies]
cpal = "0.15.3"
rtrb = "0.3.1"
