[package]
name = "phonic"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/b3nb5n/phonic"
description = "A library for digital signal processing with a focus on audio"
keywords = ["audio", "dsp", "signal", "format", "codec"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
metadata.docs.rs.all-features = true

[lib]
path = "lib.rs"

[workspace]
resolver = "2"
members = [
	"crates/phonic_macro",
	"crates/phonic_signal",
	"crates/phonic_io",
	"crates/phonic_dsp",
	"crates/phonic_graph",
	"crates/phonic_sync",
	"crates/phonic_cpal",
]

[features]
full = ["signal-full", "dsp-full", "io-full", "sync"]

signal-full = ["buf"]
buf = ["phonic_signal/buf"]

dsp = ["dep:phonic_dsp"]
dsp-full = ["dsp", "gen"]
gen = ["dsp", "phonic_dsp/gen"]

io = ["dep:phonic_io", "phonic_dsp?/io"]
io-full = ["io", "dyn-io", "all-formats", "all-codecs"]
dyn-io = ["io", "phonic_io/dyn-io"]

all-formats = ["io", "phonic_io/all-formats"]
wave = ["io", "phonic_io/wave"]

all-codecs = ["io", "phonic_io/all-codecs"]
pcm = ["io", "phonic_io/pcm"]

sync = ["dep:phonic_sync", "phonic_sync/signal"]

cpal = ["dep:phonic_cpal"]

[dependencies]
phonic_signal = { version = "0.0.1", path = "crates/phonic_signal" }
phonic_dsp = { version = "0.0.1", path = "crates/phonic_dsp", optional = true }
phonic_io = { version = "0.0.1", path = "crates/phonic_io", optional = true }
phonic_sync = { version = "0.0.1", path = "crates/phonic_sync", optional = true }
phonic_cpal = { version = "0.0.1", path = "crates/phonic_cpal", optional = true }

[dev-dependencies]
cpal = "0.15.3"
