[package]
name = "phonic_dsp"
version = "0.0.1"
edition = "2021"

[dependencies]
phonic_signal = { version = "0.0.1", path = "../phonic_signal" }
phonic_io = { version = "0.0.1", path = "../phonic_io", optional = true }
phonic_macro = { version = "0.0.1", path = "../phonic_macro" }

[features]
gen = []
io = ["dep:phonic_io"]
