[package]
name = "phonic_format_wave"
version = "0.1.0"
edition = "2021"

[dependencies]
phonic_core = { version = "0.1.0", path = "../phonic_core" }
phonic_codec_pcm = { version = "0.1.0", path = "../phonic_codec_pcm" }
phonic_io_core = { version = "0.1.0", path = "../phonic_io_core" }
phonic_signal = { version = "0.1.0", path = "../phonic_signal" }
