[package]
name = "phonic_rtrb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtrb = "0.3.0"
phonic_core = { version = "0.1.0", path = "../phonic_core" }
phonic_signal = { version = "0.1.0", path = "../phonic_signal" }
