[package]
name = "syphon"
version = "0.0.1"
edition = "2021"

[features]
default = ["signal"]
signal = ["dep:syphon_signal"]
synth = ["dep:syphon_synth"]

# io
io = ["dep:syphon_io"]
io-full = [
	"io",

	# formats
	"wave",

	# codecs
	"pcm",
]

wave = ["io", "syphon_io/wave"]

pcm = ["io", "syphon_io/pcm"]

# integrations
cpal = ["dep:syphon_cpal"]

[dependencies]
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_synth = { version = "0.1.0", path = "../syphon_synth", optional = true }
syphon_io = { version = "0.1.0", path = "../syphon_io", optional = true }
syphon_cpal = { version = "0.1.0", path = "../syphon_cpal", optional = true }
syphon_signal = { version = "0.1.0", path = "../syphon_signal", optional = true }
