[package]
name = "syphon_codec_pcm"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-slice-cast = "1.2.2"
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_io_core = { version = "0.1.0", path = "../syphon_io_core" }
syphon_signal = { version = "0.1.0", path = "../syphon_signal" }
