[package]
name = "syphon_format_wave"
version = "0.1.0"
edition = "2021"

[dependencies]
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_codec_pcm = { version = "0.1.0", path = "../syphon_codec_pcm" }
syphon_io_core = { version = "0.1.0", path = "../syphon_io_core" }
syphon_signal = { version = "0.1.0", path = "../syphon_signal" }
