[package]
name = "syphon_io"
version = "0.1.0"
edition = "2021"

[features]
full = [
	# formats
	"wave",

	# codecs
	"pcm",
]

wave = ["dep:syphon_io_format_wave"]

pcm = ["dep:syphon_io_codec_pcm"]

[dependencies]
syphon_io_core = { version = "0.1.0", path = "../syphon_io_core" }
syphon_io_codec_pcm = { version = "0.1.0", path = "../syphon_io_codec_pcm", optional = true }
syphon_io_format_wave = { version = "0.1.0", path = "../syphon_io_format_wave", optional = true }
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_signal = { version = "0.1.0", path = "../syphon_signal" }
