[package]
name = "syphon_io_codec_pcm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.2"
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_io_core = { version = "0.1.0", path = "../syphon_io_core" }
syphon_signal = { version = "0.1.0", path = "../syphon_signal" }
