[package]
name = "syphon_rtrb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtrb = "0.3.0"
syphon_core = { version = "0.1.0", path = "../syphon_core" }
syphon_signal = { version = "0.1.0", path = "../syphon_signal" }
